# lao

./: .gitignore  Cargo.toml  LAO_Context.md  LICENSE  README.md  dll-puller.ps1  lao.toml  main.rs  packaging.toml  temp_cache.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: cross-platform.yml  package.yml
cache/: demo_chain.json  echo_cache_test.json
cli/: Cargo.toml  README.md  main.rs
cli/src/: main.rs
core/: Cargo.toml  cross_platform.rs  lib.rs  main.rs  plugin_dev_tools.rs  plugin_manager.rs  plugins.rs  scheduler.rs  state_manager.rs  temp_invalid.yaml  temp_log.yaml  temp_multi_plugin.yaml  temp_type_mismatch.yaml  temp_workflow.yaml  test_runner.rs  test_vtable_layout.rs  workflow_state.rs
core/prompt_dispatcher/prompt/: prompt_library.json  prompt_library.md  system_prompt.txt
core/tests/: comprehensive_lao.rs  debug_vtable.rs  prompt_validation.rs  vtable_layout.rs
docs/: CROSS_PLATFORM.md  Enhanced-Plugin-System.md  PACKAGING.md  PLUGIN_DEVELOPMENT.md  README.md  RELEASE.md  architecture.md  cli.md  conditional_workflows.md  observability.md  plugins.md  workflows.md
lao-ui/src-tauri/: Cargo.toml  tauri.conf.json
lao-ui/src-tauri/src/: main.rs
lao_plugin_api/: Cargo.toml
lao_plugin_api/src/: lib.rs
plugins/: libecho_plugin.dylib  libgguf_plugin.dylib  liblmstudio_plugin.dylib  libollama_plugin.dylib  libplugin_template.dylib  libprompt_dispatcher_plugin.dylib  libsummarizer_plugin.dylib  libwhisper_plugin.dylib
plugins/EchoPlugin/: Cargo.toml  README.md  plugin.bak  plugin.yaml
plugins/EchoPlugin/examples/: sample_input.txt
plugins/EchoPlugin/src/: lib.rs
plugins/GGUFPlugin/: Cargo.toml  plugin.yaml
plugins/GGUFPlugin/examples/: sample_input.txt
plugins/GGUFPlugin/src/: lib.rs
plugins/LMStudioPlugin/: Cargo.toml  plugin.yaml
plugins/LMStudioPlugin/examples/: sample_input.txt
plugins/LMStudioPlugin/src/: lib.rs
plugins/OllamaPlugin/: Cargo.toml  plugin.yaml
plugins/OllamaPlugin/examples/: sample_input.txt
plugins/OllamaPlugin/src/: lib.rs
plugins/PromptDispatcherPlugin/: Cargo.toml  README.md  plugin.yaml
plugins/PromptDispatcherPlugin/examples/: sample_input.txt
plugins/PromptDispatcherPlugin/src/: lib.rs
plugins/SummarizerPlugin/: Cargo.toml  README.md  plugin.yaml
plugins/SummarizerPlugin/examples/: sample_input.txt
plugins/SummarizerPlugin/src/: lib.rs
plugins/WhisperPlugin/: Cargo.toml  README.md  plugin.yaml
plugins/WhisperPlugin/examples/: sample_input.txt
plugins/WhisperPlugin/src/: lib.rs
plugins/plugin-template/: Cargo.toml  README.md  plugin.yaml
plugins/plugin-template/src/: lib.rs
scripts/: build-plugins.sh  create-packages.sh  create-simple-packages.sh  release.sh
tools/: dll-puller.sh
tools/plugin-generator/: Cargo.toml
tools/plugin-generator/src/: main.rs
tools/plugin-registry/: Cargo.toml
tools/plugin-registry/src/: main.rs
ui/lao-ui/: .eslintrc.json  Cargo.toml  FEATURES.md  README.md  build.rs  package-lock.json  package.json  tauri.conf.json  tauri_backend.rs
ui/lao-ui/src/: app.html  backend.rs  main.rs  ui.rs
ui/lao-ui/src-tauri/src/: main.rs  tauri_backend.rs
ui/lao-ui/src-tauri/src/capabilities/: default.json
ui/lao-ui/src/components/: VisualGraphEditor.svelte
ui/lao-ui/src/lib/components/: Alert.svelte  Button.svelte  Card.svelte  Input.svelte  Select.svelte
ui/lao-ui/src/lib/styles/: design-system.css
ui/lao-ui/src/routes/: +layout.svelte  +page.svelte
workflow_states/: scheduled_822ecfb3.json  scheduled_b2f35c7a.json
workflows/: conditional_example.yaml  generated_from_prompt.yaml  multimodal_example.yaml  orchestration_demo.yaml  test.yaml  typed_echo_chain.yaml
