[package]
name = "lao-cli"
version = "0.1.20"
edition = "2021"
description = "Command-line interface for LAO - Local AI Orchestrator"
authors = ["Jake Abendroth <contact@jakea.net>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
lao-orchestrator-core = { path = "../core" }
lao_plugin_api = { path = "../lao_plugin_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
tempfile = "3.0"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
walkdir = "2.3"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "lao-cli"
path = "main.rs" 