[package]
name = "lao-orchestrator-core"
version = "0.1.0"
description = "Core DAG engine and backend for LAO Orchestrator"
authors = ["LAO Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lao_orchestrator_core"
path = "lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
libloading = "0.8"

[[bin]]
name = "test_runner"
path = "test_runner.rs"

