[package]
name = "ollama_plugin"
version = "0.1.20"
edition = "2021"
description = "Runs LLM inference using Ollama"
authors = ["Jake Abendroth <contact@jakea.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] } 