[package]
name = "prompt_dispatcher_plugin"
version = "0.1.20"
edition = "2021"
description = "Generates a workflow plan from a prompt using a local LLM (Ollama)"
authors = ["Jake Abendroth <contact@jakea.net>"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"] 