[package]
name = "summarizer_plugin"
version = "0.1.0"
edition = "2021"
description = "Summarizes input text using a local LLM"
authors = ["LAO Contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] } 