[package]
name = "summarizer_plugin"
version = "0.1.20"
edition = "2021"
description = "Summarizes input text using a local LLM"
authors = ["Jake Abendroth <contact@jakea.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] } 