[package]
name = "plugin-template"
version = "0.1.20"
edition = "2021"
description = "A template for LAO plugins. Rename and update for your plugin."
authors = ["Jake Abendroth <contact@jakea.net>"]
license = "MIT"
repository = "https://github.com/yourusername/plugin-template"
keywords = ["lao", "plugin", "template"]
categories = ["api-bindings", "development-tools"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"], optional = true }
tempfile = { version = "3.0", optional = true }

[lib]
crate-type = ["cdylib"]

[features]
default = []
test-utils = ["tokio", "tempfile"] 