[package]
name = "lao-plugin-generator"
version = "0.1.20"
edition = "2021"
description = "Generate LAO plugin templates and scaffolding"
authors = ["Jake Abendroth <contact@jakea.net>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dialoguer = "0.11"
console = "0.15"

[[bin]]
name = "lao-plugin-generator"
path = "src/main.rs" 